Update first task html.html

--- a/first task html.html
+++ b/first task html.html
@@ -52,9 +52,9 @@
         <h2>CONTACT US</h2>
         <div class="contact">
             <ul>
-                <li><a href="https://www.facebook.com/mohamed.saeed1007" target="_blank" title="mohamedsaeed" ><i class="fa fa-facebook"></i></a></li>
-                <li><a href="https://www.instagram.com/mohamed_saeed.787/" target="_blank"title="mohamed_saeed.787"><i class="fa fa-instagram"></i></a></li>
-                <li><a href="https://github.com/mohamedsaeed22" target="_blank" title="mohamedsaeed22"><i class="fa fa-github"></i></a></li>
+                <li><a href="#" title="mohamedsaeed" ><i class="fa fa-facebook"></i></a></li>
+                <li><a href="#" title="mohamed_saeed.787"><i class="fa fa-instagram"></i></a></li>
+                <li><a href="#"  title="mohamedsaeed22"><i class="fa fa-github"></i></a></li>
             </ul>
         </div>
     </div>
